# voicewedge

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  build.rs  config.example.toml
examples/: gen_icon.rs  probe_hotkeys.rs
src/: audio.rs  config.rs  focus.rs  hook.rs  inject.rs  main.rs  notify.rs  sound.rs  stt.rs
