[package]
name = "voicewedge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
base64 = "0.22.1"
cpal = "0.18.1"
directories = "6.0.0"
enigo = "0.6.1"
global-hotkey = "0.8.0"
hound = "3.5.1"
notify-rust = "4.17.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "multipart", "json", "native-tls", "http2", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tao = "0.35.3"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Security"] }

[build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
ico = "0.5.0"
